[gd_scene load_steps=4 format=2]

[ext_resource path="res://UI/LabeledProgressBar.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI/SkillsUI/SkillUITab.gd" type="Script" id=2]

[sub_resource type="Gradient" id=1]
resource_local_to_scene = true
colors = PoolColorArray( 0.172549, 0.345098, 0.545098, 1, 0.172549, 0.345098, 0.545098, 1 )

[node name="SkillUITab" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer"]
margin_right = 1280.0
margin_bottom = 66.0
size_flags_horizontal = 3

[node name="PanelContainer" type="PanelContainer" parent="ScrollContainer/HBoxContainer"]
margin_right = 1280.0
margin_bottom = 66.0
size_flags_horizontal = 3
size_flags_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer/HBoxContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1273.0
margin_bottom = 59.0
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="NameLabel" type="Label" parent="ScrollContainer/HBoxContainer/PanelContainer/VBoxContainer"]
margin_right = 1266.0
margin_bottom = 14.0
text = "Skill visible name"

[node name="LevelBar" parent="ScrollContainer/HBoxContainer/PanelContainer/VBoxContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 18.0
margin_right = 1266.0
margin_bottom = 34.0
colorGradient = SubResource( 1 )
propertyName = "Level 1"

[node name="DescLabel" type="Label" parent="ScrollContainer/HBoxContainer/PanelContainer/VBoxContainer"]
margin_top = 38.0
margin_right = 1266.0
margin_bottom = 52.0
text = "Skill visible desc"
